Changes from jTDS 0.8-rc1
=========================

05/03/2004 - Brian Heineman
 o Corrected TdsSocket to compile under 1.3.
 o Added initial (limited) ParameterMetaData support.
 o Updated DatabaseMetaData.supportsStatementPooling() to return true.

05/02/2004 - Brian Heineman
 o Updated SQLException handling to set the initCause() method with the
   initiating exception if the JVM supports it (1.4+).  Otherwise, the
   inital cause of the exception is ignored (JVM's prior to 1.4).

05/01/2004 - Brian Heineman
 o Consolidated logic for returning data from result sets and callable
   statements.
 o Added support for additional data conversions.
 o Implemented CallableStatement.getBlob(int)
 o Implemented CallableStatement.getClob(int)
 o Implemented CallableStatement.getBigDecimal(int)
 o Implemented CallableStatement.getBigDecimal(int,int)
 o Implemented CallableStatement.getDate(int)
 o Implemented CallableStatement.getDate(int,Calendar)
 o Implemented CallableStatement.getTime(int)
 o Implemented CallableStatement.getTime(int,Calendar)
 o Implemented CallableStatement.getTimestamp(int)
 o Implemented CallableStatement.getTimestamp(int,Calendar)

04/30/2004 - Brian Heineman
 o Added test for bug [945507] closing statement after selecting a large
   IMAGE - Exception
 o Applied second update to patch [934396] better IO error handling; thanks to
   Fedor Karpelevitch.

04/21/2004 - Brian Heineman
 o Corrected bug [938632] String index out of bounds error in 0.8rc1;
   added test to ensure functionality continues to work in the future.
 o Corrected bug [938494] setObject(i, o, NUMERIC/DECIMAL) cuts off decimal
   places; added test to ensure functionality continues to work in the future.

04/20/2004 - Brian Heineman
 o Updated DatabaseMetaData.supportsNamedParameters() to return true.

04/19/2004 - Brian Heineman
 o Implemented CallableStatement.getMetaData() and
   PreparedStatement.getMetaData(); both implementations are currently