@@ -1,6 +1,9 @@
 Changes from jTDS 0.8-rc1
 =========================
 
+05/06/2004 - Brian Heineman
+ o Corrected bug [946642] No support for 1.4 java.sql.Types.BOOLEAN.
+
 05/03/2004 - Brian Heineman
  o Corrected TdsSocket to compile under 1.3.
  o Added initial (limited) ParameterMetaData support.
